--- a/lib/prototype-admin/clear-data-success.html
+++ b/lib/prototype-admin/clear-data-success.html
@@ -1,10 +1,23 @@
 {% extends "layout.njk" %}
-{% set title = "Data cleared" %}
+
+{% block pageTitle %}
+  Data cleared - GOV.UK Prototype Kit
+{% endblock %}
 
 {% block content %}
+
   <h1 class="govuk-heading-m">
-    {{ title }}
+    Data cleared
   </h1>
-  <p>The session data has been cleared.</p>
-  <p><a href="/">Prototype home page</a></p>
+
+  <p class="govuk-body">
+    The session data has been cleared.
+  </p>
+
+  <p class="govuk-body">
+    <a class="govuk-link" href="/">
+      Prototype home page
+    </a>
+  </p>
+
 {% endblock %}
