--- a/lib/prototype-admin/clear-data.html
+++ b/lib/prototype-admin/clear-data.html
@@ -1,23 +1,32 @@
 {% extends "layout.njk" %}
-{% set title = "Clear data?" %}
-{% set backLink = "javascript: window.history.go(-1)" %}
+
+{% block pageTitle %}
+  Clear data? - GOV.UK Prototype Kit
+{% endblock %}
+
+{% block beforeContent %}
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript: window.history.go(-1)"
+}) }}
+{% endblock %}
 
 {% block content %}
-  <form method="post">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">
-          {{ title }}
-        </h1>
-        {{ govukWarningText({
-          text: "This will clear all of the data entered in this session",
-          iconFallbackText: "Warning"
-        }) }}
+<form method="post" accept-charset="UTF-8" novalidate>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
+        Clear data?
+      </h1>
+      {{ govukWarningText({
+        text: "This will clear all of the data entered in this session",
+        iconFallbackText: "Warning"
+      }) }}
 
-        {{ govukButton({
-          text: "Clear the data"
-        }) }}
-      </div>
+      {{ govukButton({
+        text: "Clear the data"
+      }) }}
     </div>
-  </form>
+  </div>
+</form>
 {% endblock %}
